[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Esc Menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.113725, 0.113725, 1 )

[node name="Esc Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.8909
margin_top = -0.8909
margin_right = -0.890869
margin_bottom = -0.890869
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -62.5
margin_right = 125.0
margin_bottom = 62.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_right = 264.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Panel/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 62.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Maps" type="Button" parent="Panel/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -20.0
text = "Map Selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Panel/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -10.0
margin_right = 17.5
margin_bottom = 10.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/Control/Maps" to="." method="_on_Maps_pressed"]
[connection signal="pressed" from="Panel/Control/Exit" to="." method="_on_Exit_pressed"]
